<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qt_udp_sender_ros2</name>
  <version>0.0.0</version>
  <description>Qt UDP communication in ROS2</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>qtbase5-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
